cmake_minimum_required(VERSION 3.3)
project(QBL-Pilot)

enable_language(C)
enable_language(ASM)

#设置目标体系
set(CMAKE_SYSTEM_NAME Generic)
set(CMAKE_SYSTEM_PROCESSOR cortex-m3)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/Build)

set(CMAKE_C_COMPILER "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-gcc")

#设置工具链
set(CMAKE_C_COMPILER "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-gcc")
set(CMAKE_ASM_COMPILER "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-gcc")
set(CMAKE_C_LINK_EXECUTABLE "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-ld")
set(CMAKE_OBJCOPY "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-objcopy")
set(CMAKE_OBJDUMP "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-objdump")
set(CMAKE_SIZE "D:\\Develop\\GCC_ARM\\bin\\arm-none-eabi-size")
set(CMAKE_EXECUTABLE_SUFFIX ".elf")

set(CMAKE_FIND_ROOT_PATH_MODE_PROGRAM NEVER)
set(CMAKE_FIND_ROOT_PATH_MODE_LIBRARY ONLY)
set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)

set(CMAKE_C_LINK_EXECUTABLE "<CMAKE_C_COMPILER> <LINK_FLAGS> -o <TARGET> <OBJECTS>")
set(CMAKE_CXX_LINK_EXECUTABLE "<CMAKE_CXX_COMPILER> <LINK_FLAGS> -o <TARGET> <OBJECTS>")

#设置编译选项
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -mthumb -fno-builtin -mcpu=cortex-m3 -Wall -std=gnu99 -ffunction-sections -fdata-sections -fomit-frame-pointer -mabi=aapcs -fno-unroll-loops -ffast-math -ftree-vectorize")
set(CMAKE_EXE_LINKER_FLAGS "-Wl,--gc-sections -mthumb -mcpu=cortex-m3 -mabi=aapcs")
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -T${CMAKE_SOURCE_DIR}/GNU-GCC/STM32F407VG_FLASH.ld")
set(EXECUTABLE_OUTPUT_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Build")


include_directories(Inc)
include_directories(Src)
include_directories(Drivers/CMSIS/Include)
include_directories(Drivers/CMSIS/Device/ST/STM32F4xx/Include)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc)
include_directories(Drivers/STM32F4xx_HAL_Driver/Inc/Legacy)
include_directories(Middlewares/mavlink)
include_directories(Middlewares/mavlink/common)
include_directories(Middlewares/Third_Party/FatFs/src)
include_directories(Middlewares/Third_Party/FatFs/src/drivers)
include_directories(Drivers/Device)
include_directories(Middlewares)

add_definitions("-DUSE_HAL_DRIVER" "-DSTM32F407xx")

set(SOURCE_FILES
    GNU-GCC/startup_stm32f407xx.s
    GNU-GCC/syscalls.c
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xc.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f401xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f405xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f407xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410cx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410rx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f410tx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f411xe.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f415xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f417xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f427xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f429xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f437xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f439xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f446xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f469xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f479xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Include/system_stm32f4xx.h
    Drivers/CMSIS/Device/ST/STM32F4xx/Source/Templates/system_stm32f4xx.c
    Drivers/CMSIS/Include/arm_common_tables.h
    Drivers/CMSIS/Include/arm_const_structs.h
    Drivers/CMSIS/Include/arm_math.h
    Drivers/CMSIS/Include/cmsis_armcc.h
    Drivers/CMSIS/Include/cmsis_armcc_V6.h
    Drivers/CMSIS/Include/cmsis_gcc.h
    Drivers/CMSIS/Include/core_cm0.h
    Drivers/CMSIS/Include/core_cm0plus.h
    Drivers/CMSIS/Include/core_cm3.h
    Drivers/CMSIS/Include/core_cm4.h
    Drivers/CMSIS/Include/core_cm7.h
    Drivers/CMSIS/Include/core_cmFunc.h
    Drivers/CMSIS/Include/core_cmInstr.h
    Drivers/CMSIS/Include/core_cmSimd.h
    Drivers/CMSIS/Include/core_sc000.h
    Drivers/CMSIS/Include/core_sc300.h
    Drivers/CMSIS/RTOS/Template/cmsis_os.h
    Drivers/Device/HMC5883.c
    Drivers/Device/HMC5883.h
    Drivers/Device/LED.c
    Drivers/Device/LED.h
    Drivers/Device/MPU6050.c
    Drivers/Device/MPU6050.h
    Drivers/Device/MS5611.c
    Drivers/Device/MS5611.h
    Drivers/Device/PWMInput.c
    Drivers/Device/PWMInput.h
    Drivers/Device/PWMOutput.c
    Drivers/Device/PWMOutput.h
    Drivers/Device/W25QXX.c
    Drivers/Device/W25QXX.h
    Drivers/STM32F4xx_HAL_Driver/Inc/Legacy/stm32_hal_legacy.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_adc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_can.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cec.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_conf_template.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cortex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_crc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_cryp_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dac_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dcmi_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_def.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma2d.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dma_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_dsi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_eth.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_flash_ramfunc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_fmpi2c_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_gpio_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hash_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_hcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2c_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_i2s_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_irda.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_iwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_lptim.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_ltdc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nand.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_nor.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pccard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pcd_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_pwr_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_qspi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rcc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rng.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_rtc_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sai_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sd.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sdram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_smartcard.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spdifrx.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_spi.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_sram.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_tim_ex.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_uart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_usart.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_hal_wwdg.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_fsmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_sdmmc.h
    Drivers/STM32F4xx_HAL_Driver/Inc/stm32f4xx_ll_usb.h
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_adc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_can.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cec.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cortex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_crc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_cryp_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dac_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dcmi_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma2d.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dma_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_dsi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_eth.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_flash_ramfunc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_fmpi2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_gpio.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hash_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_hcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2c_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_i2s_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_irda.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_iwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_lptim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_ltdc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_msp_template.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nand.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_nor.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pccard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pcd_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_pwr_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_qspi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rcc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rng.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_rtc_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sai_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sd.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sdram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_smartcard.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spdifrx.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_spi.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_sram.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_tim_ex.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_uart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_usart.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_hal_wwdg.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_fsmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_sdmmc.c
    Drivers/STM32F4xx_HAL_Driver/Src/stm32f4xx_ll_usb.c
    Inc/bsp_driver_sd.h
    Inc/dma.h
    Inc/fatfs.h
    Inc/ffconf.h
    Inc/gpio.h
    Inc/i2c.h
    Inc/mxconstants.h
    Inc/sdio.h
    Inc/spi.h
    Inc/stm32f4xx_hal_conf.h
    Inc/stm32f4xx_it.h
    Inc/tim.h
    Inc/usart.h
    Middlewares/mavlink/common/common.h
    Middlewares/mavlink/common/mavlink.h
    Middlewares/mavlink/common/mavlink_msg_actuator_control_target.h
    Middlewares/mavlink/common/mavlink_msg_adsb_vehicle.h
    Middlewares/mavlink/common/mavlink_msg_altitude.h
    Middlewares/mavlink/common/mavlink_msg_att_pos_mocap.h
    Middlewares/mavlink/common/mavlink_msg_attitude.h
    Middlewares/mavlink/common/mavlink_msg_attitude_quaternion.h
    Middlewares/mavlink/common/mavlink_msg_attitude_quaternion_cov.h
    Middlewares/mavlink/common/mavlink_msg_attitude_target.h
    Middlewares/mavlink/common/mavlink_msg_auth_key.h
    Middlewares/mavlink/common/mavlink_msg_autopilot_version.h
    Middlewares/mavlink/common/mavlink_msg_battery_status.h
    Middlewares/mavlink/common/mavlink_msg_camera_trigger.h
    Middlewares/mavlink/common/mavlink_msg_change_operator_control.h
    Middlewares/mavlink/common/mavlink_msg_change_operator_control_ack.h
    Middlewares/mavlink/common/mavlink_msg_command_ack.h
    Middlewares/mavlink/common/mavlink_msg_command_int.h
    Middlewares/mavlink/common/mavlink_msg_command_long.h
    Middlewares/mavlink/common/mavlink_msg_control_system_state.h
    Middlewares/mavlink/common/mavlink_msg_data_stream.h
    Middlewares/mavlink/common/mavlink_msg_data_transmission_handshake.h
    Middlewares/mavlink/common/mavlink_msg_debug.h
    Middlewares/mavlink/common/mavlink_msg_debug_vect.h
    Middlewares/mavlink/common/mavlink_msg_distance_sensor.h
    Middlewares/mavlink/common/mavlink_msg_encapsulated_data.h
    Middlewares/mavlink/common/mavlink_msg_extended_sys_state.h
    Middlewares/mavlink/common/mavlink_msg_file_transfer_protocol.h
    Middlewares/mavlink/common/mavlink_msg_global_position_int.h
    Middlewares/mavlink/common/mavlink_msg_global_position_int_cov.h
    Middlewares/mavlink/common/mavlink_msg_global_vision_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_gps2_raw.h
    Middlewares/mavlink/common/mavlink_msg_gps2_rtk.h
    Middlewares/mavlink/common/mavlink_msg_gps_global_origin.h
    Middlewares/mavlink/common/mavlink_msg_gps_inject_data.h
    Middlewares/mavlink/common/mavlink_msg_gps_raw_int.h
    Middlewares/mavlink/common/mavlink_msg_gps_rtk.h
    Middlewares/mavlink/common/mavlink_msg_gps_status.h
    Middlewares/mavlink/common/mavlink_msg_heartbeat.h
    Middlewares/mavlink/common/mavlink_msg_highres_imu.h
    Middlewares/mavlink/common/mavlink_msg_hil_controls.h
    Middlewares/mavlink/common/mavlink_msg_hil_gps.h
    Middlewares/mavlink/common/mavlink_msg_hil_optical_flow.h
    Middlewares/mavlink/common/mavlink_msg_hil_rc_inputs_raw.h
    Middlewares/mavlink/common/mavlink_msg_hil_sensor.h
    Middlewares/mavlink/common/mavlink_msg_hil_state.h
    Middlewares/mavlink/common/mavlink_msg_hil_state_quaternion.h
    Middlewares/mavlink/common/mavlink_msg_home_position.h
    Middlewares/mavlink/common/mavlink_msg_landing_target.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned_cov.h
    Middlewares/mavlink/common/mavlink_msg_local_position_ned_system_global_offset.h
    Middlewares/mavlink/common/mavlink_msg_log_data.h
    Middlewares/mavlink/common/mavlink_msg_log_entry.h
    Middlewares/mavlink/common/mavlink_msg_log_erase.h
    Middlewares/mavlink/common/mavlink_msg_log_request_data.h
    Middlewares/mavlink/common/mavlink_msg_log_request_end.h
    Middlewares/mavlink/common/mavlink_msg_log_request_list.h
    Middlewares/mavlink/common/mavlink_msg_manual_control.h
    Middlewares/mavlink/common/mavlink_msg_manual_setpoint.h
    Middlewares/mavlink/common/mavlink_msg_memory_vect.h
    Middlewares/mavlink/common/mavlink_msg_message_interval.h
    Middlewares/mavlink/common/mavlink_msg_mission_ack.h
    Middlewares/mavlink/common/mavlink_msg_mission_clear_all.h
    Middlewares/mavlink/common/mavlink_msg_mission_count.h
    Middlewares/mavlink/common/mavlink_msg_mission_current.h
    Middlewares/mavlink/common/mavlink_msg_mission_item.h
    Middlewares/mavlink/common/mavlink_msg_mission_item_int.h
    Middlewares/mavlink/common/mavlink_msg_mission_item_reached.h
    Middlewares/mavlink/common/mavlink_msg_mission_request.h
    Middlewares/mavlink/common/mavlink_msg_mission_request_list.h
    Middlewares/mavlink/common/mavlink_msg_mission_request_partial_list.h
    Middlewares/mavlink/common/mavlink_msg_mission_set_current.h
    Middlewares/mavlink/common/mavlink_msg_mission_write_partial_list.h
    Middlewares/mavlink/common/mavlink_msg_named_value_float.h
    Middlewares/mavlink/common/mavlink_msg_named_value_int.h
    Middlewares/mavlink/common/mavlink_msg_nav_controller_output.h
    Middlewares/mavlink/common/mavlink_msg_optical_flow.h
    Middlewares/mavlink/common/mavlink_msg_optical_flow_rad.h
    Middlewares/mavlink/common/mavlink_msg_param_map_rc.h
    Middlewares/mavlink/common/mavlink_msg_param_request_list.h
    Middlewares/mavlink/common/mavlink_msg_param_request_read.h
    Middlewares/mavlink/common/mavlink_msg_param_set.h
    Middlewares/mavlink/common/mavlink_msg_param_value.h
    Middlewares/mavlink/common/mavlink_msg_ping.h
    Middlewares/mavlink/common/mavlink_msg_position_target_global_int.h
    Middlewares/mavlink/common/mavlink_msg_position_target_local_ned.h
    Middlewares/mavlink/common/mavlink_msg_power_status.h
    Middlewares/mavlink/common/mavlink_msg_radio_status.h
    Middlewares/mavlink/common/mavlink_msg_raw_imu.h
    Middlewares/mavlink/common/mavlink_msg_raw_pressure.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_override.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_raw.h
    Middlewares/mavlink/common/mavlink_msg_rc_channels_scaled.h
    Middlewares/mavlink/common/mavlink_msg_request_data_stream.h
    Middlewares/mavlink/common/mavlink_msg_resource_request.h
    Middlewares/mavlink/common/mavlink_msg_safety_allowed_area.h
    Middlewares/mavlink/common/mavlink_msg_safety_set_allowed_area.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu2.h
    Middlewares/mavlink/common/mavlink_msg_scaled_imu3.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure2.h
    Middlewares/mavlink/common/mavlink_msg_scaled_pressure3.h
    Middlewares/mavlink/common/mavlink_msg_serial_control.h
    Middlewares/mavlink/common/mavlink_msg_servo_output_raw.h
    Middlewares/mavlink/common/mavlink_msg_set_actuator_control_target.h
    Middlewares/mavlink/common/mavlink_msg_set_attitude_target.h
    Middlewares/mavlink/common/mavlink_msg_set_gps_global_origin.h
    Middlewares/mavlink/common/mavlink_msg_set_home_position.h
    Middlewares/mavlink/common/mavlink_msg_set_mode.h
    Middlewares/mavlink/common/mavlink_msg_set_position_target_global_int.h
    Middlewares/mavlink/common/mavlink_msg_set_position_target_local_ned.h
    Middlewares/mavlink/common/mavlink_msg_sim_state.h
    Middlewares/mavlink/common/mavlink_msg_statustext.h
    Middlewares/mavlink/common/mavlink_msg_sys_status.h
    Middlewares/mavlink/common/mavlink_msg_system_time.h
    Middlewares/mavlink/common/mavlink_msg_terrain_check.h
    Middlewares/mavlink/common/mavlink_msg_terrain_data.h
    Middlewares/mavlink/common/mavlink_msg_terrain_report.h
    Middlewares/mavlink/common/mavlink_msg_terrain_request.h
    Middlewares/mavlink/common/mavlink_msg_timesync.h
    Middlewares/mavlink/common/mavlink_msg_v2_extension.h
    Middlewares/mavlink/common/mavlink_msg_vfr_hud.h
    Middlewares/mavlink/common/mavlink_msg_vibration.h
    Middlewares/mavlink/common/mavlink_msg_vicon_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_vision_position_estimate.h
    Middlewares/mavlink/common/mavlink_msg_vision_speed_estimate.h
    Middlewares/mavlink/common/testsuite.h
    Middlewares/mavlink/common/version.h
    Middlewares/mavlink/checksum.h
    Middlewares/mavlink/mavlink_conversions.h
    Middlewares/mavlink/mavlink_helpers.h
    Middlewares/mavlink/mavlink_types.h
    Middlewares/mavlink/protocol.h
    Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.c
    Middlewares/Third_Party/FatFs/src/drivers/sd_diskio.h
    Middlewares/Third_Party/FatFs/src/diskio.c
    Middlewares/Third_Party/FatFs/src/diskio.h
    Middlewares/Third_Party/FatFs/src/ff.c
    Middlewares/Third_Party/FatFs/src/ff.h
    Middlewares/Third_Party/FatFs/src/ff_gen_drv.c
    Middlewares/Third_Party/FatFs/src/ff_gen_drv.h
    Middlewares/Third_Party/FatFs/src/ffconf_template.h
    Middlewares/Third_Party/FatFs/src/integer.h
    Middlewares/RingBuffer.c
    Middlewares/RingBuffer.h
    Middlewares/TimeMeter.c
    Middlewares/TimeMeter.h
    Middlewares/Utils.c
    Middlewares/Utils.h
    Src/bsp_driver_sd.c
    Src/dma.c
    Src/fatfs.c
    Src/gpio.c
    Src/i2c.c
    Src/main.c
    Src/sdio.c
    Src/spi.c
    Src/stm32f4xx_hal_msp.c
    Src/stm32f4xx_it.c
    Src/tim.c
    Src/usart.c)

add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
ADD_CUSTOM_COMMAND(TARGET ${PROJECT_NAME} POST_BUILD COMMAND ${CMAKE_SIZE} ${PROJECT_NAME}.elf)
ADD_CUSTOM_TARGET(${CMAKE_PROJECT_NAME}.bin ALL DEPENDS ${CMAKE_PROJECT_NAME} COMMAND ${CMAKE_OBJCOPY} -Obinary ${CMAKE_PROJECT_NAME}.elf ${CMAKE_PROJECT_NAME}.bin)
